--- a/app/RandomMovie.module.css
+++ b/app/RandomMovie.module.css
@@ -1,7 +1,13 @@
+.randomMovieContainer {
+  border: 5px solid rgb(0, 0, 0);
+  border-radius: 10px;
+}
+
 .movieTitle {
   text-align: center;
 }
 
 .moviePoster {
   border-radius: 10px;
+  border: 5px solid rgb(0, 0, 0);
 }
