--- a/app/RandomMovie.module.css
+++ b/app/RandomMovie.module.css
@@ -10,4 +10,8 @@
 .moviePoster {
   border-radius: 10px;
   border: 5px solid rgb(0, 0, 0);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
