--- a/app/Watchlist.module.css
+++ b/app/Watchlist.module.css
@@ -1,2 +1,11 @@
+.watchlistContainer {
+  /* display: grid;
+  grid-template-columns: repeat (auto-fit, minmax(15rem, 1fr));
+  gap: 16px; */
+  list-style: none;
+}
+
 .imageContainer {
+  width: 30%;
+  height: auto;
 }
