--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,5 +4,10 @@
 }
 
 .title {
+  margin: 0;
+  padding: 1rem;
   text-align: center;
+  background-color: rgb(115, 95, 50);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
 }
