--- a/app/navbar/NavBar.module.css
+++ b/app/navbar/NavBar.module.css
@@ -10,9 +10,11 @@
   /* position: relative;
     min-height: 100vh; */
 
-  position: sticky;
+  position: fixed;
   z-index: 30;
   bottom: 0;
+  left: 0;
+  right: 0;
   background-color: rgb(115, 95, 50);
 }
 
