add point streaming-options in movie/[id]/page.js

--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -52,3 +52,19 @@
   margin: 0 10px;
   align-self: flex-start;
 }
+
+.languageContainer {
+}
+
+.languageTitle {
+  margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.languageInfo {
+  margin: 0 10px;
+  align-self: flex-start;
+}
+
+.streamingContainer {
+}
