add placeholders for director, cast and streaming-options on detailpage

--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -63,5 +63,19 @@
 }
 
 .streamingContainer {
+}
+
+.streamingTitle {
   margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.castTitle {
+  margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.castInfo {
+  margin: 20px 10px;
+  align-self: flex-start;
 }
