--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -4,9 +4,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  /* align-items: center; */
-  /* margin-left: 10px;
-  margin-right: 10px; */
 }
 
 .title {
@@ -25,6 +22,16 @@
   margin: 20px auto;
   width: 50%;
   height: auto;
+}
+
+.directorTitle {
+  margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.directorInfo {
+  margin: 0 10px;
+  align-self: flex-start;
 }
 
 .synopsisTitle {
