--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -34,6 +34,16 @@
   align-self: flex-start;
 }
 
+.castTitle {
+  margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.castInfo {
+  margin: 0 10px;
+  align-self: flex-start;
+}
+
 .synopsisTitle {
   margin: 20px 10px;
   align-self: flex-start;
@@ -73,16 +83,6 @@
 }
 
 .streamingTitle {
-  margin: 20px 10px;
-  align-self: flex-start;
-}
-
-.castTitle {
-  margin: 20px 10px;
-  align-self: flex-start;
-}
-
-.castInfo {
   margin: 20px 10px;
   align-self: flex-start;
 }
