--- a/components/Collapsible/Collapsible.module.css
+++ b/components/Collapsible/Collapsible.module.css
@@ -14,7 +14,8 @@
   justify-content: center;
   align-items: center;
 
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .buttonText {
