add background-color to submitButton & play with width & height

--- a/components/Collapsible/Collapsible.module.css
+++ b/components/Collapsible/Collapsible.module.css
@@ -3,6 +3,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.5em;
+  border-radius: 10px;
 
   background-color: rgb(115, 95, 50);
 }
@@ -21,5 +22,4 @@
 .buttonText {
   font-weight: 900;
   padding: 0.5em;
-  color: rgb(0, 0, 0);
 }
