--- a/components/Collapsible/SearchForm.module.css
+++ b/components/Collapsible/SearchForm.module.css
@@ -17,9 +17,10 @@
   width: auto;
   background-color: rgb(115, 95, 50);
   border-radius: 10px;
+  padding: 0.5em;
 }
 
 .submitButton > * {
-  padding: 5px;
   text-align: center;
+  font-weight: 900;
 }
