--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -83,11 +83,17 @@
 }
 
 .streamingTitle {
-  margin: 20px 10px;
+  /* margin: 20px 10px; */
+  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   align-self: flex-start;
 }
 
 .streamingInfo {
-  margin: 0 10px;
+  display: flex;
+  /* margin: 0 10px; */
   align-self: flex-start;
+  flex-wrap: wrap;
 }
