--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -44,6 +44,16 @@
   align-self: flex-start;
 }
 
+.genresTitle {
+  margin: 20px 10px;
+  align-self: flex-start;
+}
+
+.genresText {
+  margin: 0 10px;
+  align-self: flex-start;
+}
+
 .synopsisTitle {
   margin: 20px 10px;
   align-self: flex-start;
