--- a/components/GetSearchResults/GetSearchResults.module.css
+++ b/components/GetSearchResults/GetSearchResults.module.css
@@ -6,3 +6,27 @@
   color: rgb(0, 0, 0);
   border-radius: 10px;
 }
+
+.searchResultsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.imageContainer {
+  position: relative;
+  width: 150px;
+  justify-content: center;
+}
+
+.poster {
+  align-items: center;
+  border-radius: 10px;
+  border: 5px solid rgb(0, 0, 0);
+  display: block;
+}
