--- a/components/GetSearchResults/GetSearchResults.module.css
+++ b/components/GetSearchResults/GetSearchResults.module.css
@@ -19,19 +19,21 @@
 }
 
 .movieContainer {
+  display: flex;
+  flex-direction: column;
   background-color: rgb(0, 0, 0);
+  border-radius: 10px;
   width: 70vw;
-  align-content: center;
+  margin: 20px;
+  padding: 20px;
 }
 
 .imageContainer {
   position: relative;
   width: 150px;
-  justify-content: center;
 }
 
 .poster {
-  align-items: center;
   border-radius: 10px;
   border: 5px solid rgb(0, 0, 0);
   display: block;
