--- a/app/page.module.css
+++ b/app/page.module.css
@@ -4,5 +4,5 @@
   text-align: center;
   background-color: rgb(115, 95, 50);
   color: rgb(0, 0, 0);
-  border-radius: 10px;
+  border-radius: 0 0 0.5em 0.5em;
 }
