--- a/components/Navbar/NavBar.module.css
+++ b/components/Navbar/NavBar.module.css
@@ -5,7 +5,7 @@
   margin: 0;
   padding: 1rem;
   border: solid 0.2em black;
-  border-radius: 2em;
+  border-radius: 1em 1em 0 0;
 
   /* position: relative;
     min-height: 100vh; */
