--- a/components/GetSearchResults/GetSearchResults.module.css
+++ b/components/GetSearchResults/GetSearchResults.module.css
@@ -4,13 +4,14 @@
   text-align: center;
   background-color: rgb(115, 95, 50);
   color: rgb(0, 0, 0);
-  border-radius: 10px;
+  border-radius: 0 0 0.5em 0.5em;
 }
 
 .searchResultsContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   min-height: 100vh;
   margin-top: 30px;
   margin-bottom: 10px;
