--- a/app/movie/[id]/Movie.module.css
+++ b/app/movie/[id]/Movie.module.css
@@ -24,6 +24,18 @@
   height: auto;
 }
 
+.toggleButtonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.toggleButton {
+  width: 50vw;
+  height: auto;
+  padding: 2em;
+}
+
 .directorTitle {
   /* margin: 20px 10px; */
   margin-top: 20px;
