--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -2,11 +2,16 @@
   /* display: grid;
   grid-template-columns: repeat (auto-fit, minmax(15rem, 1fr));
   gap: 1rem; */
+
   list-style: none;
 }
 
 .watchlistHeader {
   text-align: center;
+}
+
+.watchlistMovie {
+  display: flex;
 }
 
 .imageContainer {
@@ -15,3 +20,4 @@
   border: 3px solid rgb(0, 0, 0);
   border-radius: 10px;
 }
+/*box shadow generator*/
