use custom prevArrow and nextArrow

--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -1,3 +1,16 @@
+.slick-prev {
+  left: -52px !important;
+}
+.slick-next:before,
+.slick-prev:before {
+  content: "" !important;
+}
+.next-slick-arrow,
+.prev-slick-arrow {
+  color: #000000;
+  font-size: 45px;
+}
+
 .watchlistContainer {
   /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
