rewrite import for db/connect.js in route & comment out play-button incl Link to route in NavBar

--- a/components/Navbar/NavBar.module.css
+++ b/components/Navbar/NavBar.module.css
@@ -1,6 +1,6 @@
 .navBarContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   margin: 0;
   padding: 1rem;
