--- a/components/Collapsible/SearchForm.module.css
+++ b/components/Collapsible/SearchForm.module.css
@@ -17,10 +17,11 @@
   width: auto;
   background-color: rgb(115, 95, 50);
   border-radius: 10px;
-  padding: 0.5em;
+  padding: 0;
 }
 
 .submitButton > * {
   text-align: center;
   font-weight: 900;
+  
 }
