--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -55,6 +55,10 @@
   filter: blur(0); /* Remove blur effect for the center slide */
 }
 
+/* ul > .slick-dots{
+  margin: 20px;
+} */
+
 .watchlistPoster {
   border-radius: 10px;
   border: 5px solid rgb(0, 0, 0);
@@ -75,6 +79,9 @@
   margin:20px;
   justify-content: center;
   align-items: center;
+  border: 5px solid rgb(0, 0, 0);
+  border-radius: 10px;
+  padding: 1em;
 }
 
 /*box shadow generator*/
