--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -1,3 +1,7 @@
+.slick-slide{
+  margin: 0 20px;
+}
+
 .slick-next {
   right: 0;
 }
@@ -20,6 +24,15 @@
   color: #000000;
   font-size: 45px;
   right: 0px;
+}
+
+.slick-slide {
+  filter: blur(5px); /* Apply blur effect to all slides */
+  transition: filter 0.3s ease;
+}
+
+.slick-slide.slick-center {
+  filter: blur(0); /* Remove blur effect for the center slide */
 }
 
 .watchlistContainer {
@@ -47,14 +60,6 @@
   border-radius: 10px;
 }
 
-.slick-slide {
-  filter: blur(5px); /* Apply blur effect to all slides */
-  transition: filter 0.3s ease;
-}
-
-.slick-slide.slick-center {
-  filter: blur(0); /* Remove blur effect for the center slide */
-}
 
 /* ul > .slick-dots{
   margin: 20px;
