--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -26,7 +26,8 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
   padding-top: 30px;
-  width: 100vw;
+  text-align: center;
+  /* width: 90vw; */
 }
 
 .watchlistMovie {
