--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -26,8 +26,7 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
   padding-top: 30px;
-  text-align: center;
-  /* width: 90vw; */
+    
 }
 
 .watchlistMovie {
@@ -48,8 +47,9 @@
 
 .movieOnWatchlistTitle{
   height: auto;
-  width: fit-content;
-block-size: fit-content;
+  text-align: center;
+  /* width: fit-content;
+block-size: fit-content; */
 
 }
 
