--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -66,6 +66,7 @@
   height: 1.1rem;
   white-space: nowrap;
   text-overflow: ellipsis;
+  padding: 0.5rem;
   /* width: fit-content;
 block-size: fit-content; */
 
