--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -1,5 +1,8 @@
 .sliderContent{
-  height: 100%;
+  /* display: flex;
+  flex-direction: column;
+  align-content: center; */
+  /* height: 100%; */
 }
 
 .slick-track
@@ -39,8 +42,7 @@
   text-align: center;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
-  padding-top: 30px;
-    
+  padding-top: 30px;    
 }
 
 .watchlistMovie {
