comment out min-height: 100vh

--- a/components/IsFavorite/IsFavorite.module.css
+++ b/components/IsFavorite/IsFavorite.module.css
@@ -3,7 +3,7 @@
   color: rgb(198, 151, 73);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .title {
