--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -3,8 +3,10 @@
   flex-direction: column;
   align-content: center; */
   /* height: 100%; */
+
 }
 
+/*https://stackoverflow.com/questions/49028877/slick-carousel-force-slides-to-have-the-same-height*/
 .slick-track
 {
     display: flex !important;
@@ -13,6 +15,11 @@
 .slick-slide
 {
     height: inherit !important;
+}
+
+.slick-slide > * {
+  display: grid;
+  place-items: center; 
 }
 
 .watchlistContainer {
@@ -42,7 +49,7 @@
   text-align: center;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 10px;
-  padding-top: 30px;    
+  padding-top: 30px;   
 }
 
 .watchlistMovie {
