--- a/components/Navbar/NavBar.module.css
+++ b/components/Navbar/NavBar.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   margin: 0;
   padding: 1rem;
-  border: solid 0.2em black;
+  /* border: solid 0.2em black; */
   border-radius: 1em 1em 0 0;
 
   /* position: relative;
