comment out flexbox for watchlistMovie

--- a/components/Watchlist/Watchlist.module.css
+++ b/components/Watchlist/Watchlist.module.css
@@ -52,9 +52,9 @@
   padding-top: 30px;   
 }
 
-.watchlistMovie {
+/* .watchlistMovie {
   display: flex;
-}
+} */
 
 .imageContainer {
   width: 30%;
